--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "sass": "^1.55.0",
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "flowbite": "^1.5.3"
     }
 }
